--- a/scootes/styles/base.css
+++ b/scootes/styles/base.css
@@ -9,23 +9,29 @@
     --font: 'Montserrat', sans-serif;
 }
 
+*, *:before, *:after {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    min-width: 290px;
+}
+
 /* HEADER */
 
 header {
     font-family: var(--font);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
 }
 
 header img {
     width: 4rem;
     height: 4rem;
-    margin: 0.75rem;
+    margin: 0.75rem 0.75rem 0 0.75rem;
 }
 
 header h1 {
-    margin: 0.75rem;
+    margin: 0 0.75rem;
     color: var(--secondary-color);
     font-size: 60px;
 }
@@ -36,9 +42,6 @@ header h1 {
 }
 
 .navigation ul {
-    display: flex;
-    flex-direction: row;
-    align-content: center;
     list-style: none;
     padding: 0;
     justify-content: space-between;
@@ -52,14 +55,38 @@ header h1 {
     text-transform: uppercase;    
 }
 
+/* HAMBURGER */
+#menu {
+	font-size: 1.5rem;
+	border: 0;
+	background: none;
+	position: absolute;
+	top: 2rem;
+	right: 1rem;
+}
+
+#menu::before {
+	content: "☰";
+    color: var(--secondary-color);
+}
+
+#menu.open::before {
+	content: "X";
+    color: var(--secondary-color);
+}
+
+.navigation a {
+	display: none;
+	padding: 1rem;
+}
+
+.open a {
+	display: block;
+}
+
 /* HERO */
 #hero, #local, #options, footer {
     margin-top: 3rem;
-}
-
-#hero {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
 }
 
 #hero div {
@@ -69,7 +96,7 @@ header h1 {
 
 #hero img {
     width: 100%;
-    height: 25rem;
+    height: 20rem;
     object-fit: cover;
 }
 
@@ -77,6 +104,7 @@ header h1 {
     font-family: var(--font);
     color: var(--secondary-color);
     margin: 0.75rem;
+    padding-top: 0.5rem;
 }
 
 #hero p , #local p, #options section li {
@@ -101,13 +129,6 @@ header h1 {
 
 #local {
     background-color: var(--accent2-color);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-
-#localGrid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
 }
 
 #local section h3, #options section h3 {
@@ -116,8 +137,15 @@ header h1 {
     margin: 0.75rem;
 }
 
+#local section img {
+    margin-left: 20%;
+}
+
 iframe {
     border: none;
+    object-fit: cover;
+    width: 100%;
+    height: 260px;
 }
 
 /* OPTIONS */
@@ -127,19 +155,15 @@ iframe {
 }
 
 #options section img {
-    width: 20rem;
-}
-
-#options{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    height: 10rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* FOOTER */
 
 footer {
-    display: grid;
-    grid-template-columns: 4fr 1fr;
     align-content: center;
     padding: 0.75rem;
     background-color: var(--primary-color);
