--- a/scootes/styles/base.css
+++ b/scootes/styles/base.css
@@ -5,6 +5,7 @@
     --secondary-color: #02C394;
     --accent-color: #F9F9F4;
     --accent2-color: #f0efe8;
+    --accent3-color: #202b33;
 
     --font: 'Montserrat', sans-serif;
 }
@@ -237,3 +238,77 @@ tbody tr:nth-child(even) {
     margin: 0.75rem; 
 }
 
+#resForm fieldset {
+    margin: 1rem;
+    border: 2px solid var(--primary-color);
+    border-radius: 6px;
+    padding: .5rem 2%;
+}
+
+#resForm legend {
+    color: var(--primary-color);
+    padding: 0.5rem;
+    font-family: var(--font);
+    font-size: 1.25rem;
+}
+
+#resForm label {
+    display: block;
+    padding: 1rem;
+    color: var(--accent3-color);
+    font-size: 1rem;
+    font-family: var(--font);
+}
+
+#resForm input[type="text"],
+#resForm input[type="email"],
+#resForm input[type="tel"] {
+    display: block;
+    border-radius: 6px;
+    padding: .5rem;
+    color: var(--accent3-color);
+    width: 100%;
+    max-width: 400px;
+    appearance: none;    
+}
+
+#resForm select {
+    display: block;
+    border-radius: 6px;
+    padding: .5rem;
+    margin: 0.25rem 1rem;
+    color: var(--accent3-color);
+    width: 92%;
+    max-width: 400px;
+    appearance: none;     
+}
+
+textarea {
+    display: block;
+    width:100%;
+    margin:5px 0;
+    padding:3px;
+    background-color: var(--accent1-color);
+    border-radius: 6px;
+    max-width: 400px;
+}
+
+#resForm input[type="radio"] {
+    margin-right: 6px;
+}
+
+#resForm input[type="submit"] {
+    border: none;
+    background-color: var(--secondary-color);
+    color: var(--accent3-color);
+    font-family: var(--font);
+    font-size: 1.5rem;
+    font-weight: bold;
+    border-radius: 6px;
+    padding: 1rem;
+    width: 100%;
+    max-width: 400px;
+    margin: 1rem;
+    box-shadow: 1px 1px 4px var(--primary-color);
+    cursor: pointer;
+}
