--- a/scootes/styles/medium.css
+++ b/scootes/styles/medium.css
@@ -5,6 +5,7 @@
         --secondary-color: #02C394;
         --accent-color: #F9F9F4;
         --accent2-color: #f0efe8;
+        --accent3-color: #202b33;
     
         --font: 'Montserrat', sans-serif;
     }
