--- a/scoots/styles/medium.css
+++ b/scoots/styles/medium.css
@@ -30,5 +30,8 @@
         grid-column: 1/3;
     }
 
-
+    #conGrid, #locGrid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
