button name changes

--- a/scoots/styles/base.css
+++ b/scoots/styles/base.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: #00568D;
-    --secondary-color: #02C394;
+    --secondary-color: #1e9174;
     --accent-color: #F9F9F4;
     --accent2-color: #f0efe8;
     --accent3-color: #202b33;
