--- a/scoots/styles/large.css
+++ b/scoots/styles/large.css
@@ -2,7 +2,7 @@
 
     :root {
         --primary-color: #00568D;
-        --secondary-color: #02C394;
+        --secondary-color: #14a07d;
         --accent-color: #F9F9F4;
         --accent2-color: #f0efe8;
         --accent3-color: #202b33;
